Fixed some build issues, modified the README.md file

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,6 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>23</maven.compiler.source>
         <maven.compiler.target>23</maven.compiler.target>
-        <exec.mainClass>com.mycompany.phonebook.PhoneBook</exec.mainClass>
+        <exec.mainClass>com.mycompany.phonebook.phoneBookGUI</exec.mainClass>
     </properties>
 </project>
